Comp/src/main/java/parser/MyParserParser.java
package parser;// Generated from MyParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, RUN=2, PRINT=3, SCAN=4, IF=5, ELSE=6, FOR=7, WHILE=8, INSERT=9, 
		GLB=10, RETURN=11, TRUE=12, FALSE=13, TYPE=14, OPEN=15, CLOSE=16, OPENB=17, 
		CLOSEB=18, SUM=19, SUB=20, MULT=21, DIV=22, MOD=23, COMA=24, EOL=25, EQUAL=26, 
		DEQUAL=27, DSUM=28, DSUB=29, BIGGER=30, SMALLER=31, BEQUAL=32, SMEQUAL=33, 
		NEQUAL=34, AND=35, OR=36, STR=37, NUM=38, ID=39, COMMENT=40, LINE_COMMENT=41, 
		WS=42;
	public static final int
		RULE_prog = 0, RULE_insert = 1, RULE_global = 2, RULE_run = 3, RULE_block = 4, 
		RULE_line = 5, RULE_var = 6, RULE_atr = 7, RULE_output = 8, RULE_outprint = 9, 
		RULE_expr = 10, RULE_fact = 11, RULE_term = 12, RULE_uif = 13, RULE_condition = 14, 
		RULE_comp = 15, RULE_uwhile = 16, RULE_ufor = 17, RULE_incr = 18, RULE_function = 19, 
		RULE_par = 20, RULE_cfunction = 21, RULE_cpar = 22, RULE_rtrn = 23, RULE_input = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "insert", "global", "run", "block", "line", "var", "atr", "output", 
			"outprint", "expr", "fact", "term", "uif", "condition", "comp", "uwhile", 
			"ufor", "incr", "function", "par", "cfunction", "cpar", "rtrn", "input"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'0'", "'main'", "'print'", "'scan'", "'if'", "'else'", "'for'", 
			"'while'", "'insert'", "'global'", "'return'", "'true'", "'false'", null, 
			"'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", "','", 
			"';'", "'='", "'=='", "'+='", "'-='", "'>'", "'<'", "'>='", "'<='", "'!='", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "RUN", "PRINT", "SCAN", "IF", "ELSE", "FOR", "WHILE", "INSERT", 
			"GLB", "RETURN", "TRUE", "FALSE", "TYPE", "OPEN", "CLOSE", "OPENB", "CLOSEB", 
			"SUM", "SUB", "MULT", "DIV", "MOD", "COMA", "EOL", "EQUAL", "DEQUAL", 
			"DSUM", "DSUB", "BIGGER", "SMALLER", "BEQUAL", "SMEQUAL", "NEQUAL", "AND", 
			"OR", "STR", "NUM", "ID", "COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public RunContext run() {
			return getRuleContext(RunContext.class,0);
		}
		public InsertContext insert() {
			return getRuleContext(InsertContext.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INSERT) {
				{
				setState(50);
				insert();
				}
			}

			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GLB) {
				{
				setState(53);
				global();
				}
			}

			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(56);
				function();
				}
			}

			setState(59);
			run();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertContext extends ParserRuleContext {
		public List<TerminalNode> INSERT() { return getTokens(MyParserParser.INSERT); }
		public TerminalNode INSERT(int i) {
			return getToken(MyParserParser.INSERT, i);
		}
		public List<TerminalNode> STR() { return getTokens(MyParserParser.STR); }
		public TerminalNode STR(int i) {
			return getToken(MyParserParser.STR, i);
		}
		public InsertContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterInsert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitInsert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitInsert(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertContext insert() throws RecognitionException {
		InsertContext _localctx = new InsertContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_insert);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(61);
				match(INSERT);
				setState(62);
				match(STR);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INSERT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode GLB() { return getToken(MyParserParser.GLB, 0); }
		public TerminalNode OPENB() { return getToken(MyParserParser.OPENB, 0); }
		public TerminalNode CLOSEB() { return getToken(MyParserParser.CLOSEB, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(GLB);
			setState(68);
			match(OPENB);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				var();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE );
			setState(74);
			match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RunContext extends ParserRuleContext {
		public TerminalNode RUN() { return getToken(MyParserParser.RUN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public RunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterRun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitRun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitRun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RunContext run() throws RecognitionException {
		RunContext _localctx = new RunContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_run);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(RUN);
			setState(77);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(MyParserParser.OPENB, 0); }
		public TerminalNode CLOSEB() { return getToken(MyParserParser.CLOSEB, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(OPENB);
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				line();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << SCAN) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << RETURN) | (1L << TYPE) | (1L << OPEN) | (1L << STR) | (1L << NUM) | (1L << ID))) != 0) );
			setState(85);
			match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LineatrContext extends LineContext {
		public AtrContext atr() {
			return getRuleContext(AtrContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public LineatrContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineatr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineatr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineatr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineoutContext extends LineContext {
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public LineoutContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineout(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineout(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineout(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LinewhileContext extends LineContext {
		public UwhileContext uwhile() {
			return getRuleContext(UwhileContext.class,0);
		}
		public LinewhileContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLinewhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLinewhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLinewhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DelcContext extends LineContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public DelcContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterDelc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitDelc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitDelc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineretContext extends LineContext {
		public RtrnContext rtrn() {
			return getRuleContext(RtrnContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public LineretContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineret(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineret(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineret(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineifContext extends LineContext {
		public UifContext uif() {
			return getRuleContext(UifContext.class,0);
		}
		public LineifContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineif(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LinecfuncContext extends LineContext {
		public CfunctionContext cfunction() {
			return getRuleContext(CfunctionContext.class,0);
		}
		public LinecfuncContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLinecfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLinecfunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLinecfunc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineexprContext extends LineContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public LineexprContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineinpContext extends LineContext {
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public LineinpContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLineinp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLineinp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLineinp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LineforContext extends LineContext {
		public UforContext ufor() {
			return getRuleContext(UforContext.class,0);
		}
		public LineforContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterLinefor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitLinefor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitLinefor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_line);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new DelcContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				var();
				}
				break;
			case 2:
				_localctx = new LineatrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				atr();
				setState(89);
				match(EOL);
				}
				break;
			case 3:
				_localctx = new LineinpContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				input();
				setState(92);
				match(EOL);
				}
				break;
			case 4:
				_localctx = new LineoutContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				output();
				setState(95);
				match(EOL);
				}
				break;
			case 5:
				_localctx = new LineexprContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				expr();
				setState(98);
				match(EOL);
				}
				break;
			case 6:
				_localctx = new LineifContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				uif();
				}
				break;
			case 7:
				_localctx = new LinewhileContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				uwhile();
				}
				break;
			case 8:
				_localctx = new LineforContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(102);
				ufor();
				}
				break;
			case 9:
				_localctx = new LineretContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(103);
				rtrn();
				setState(104);
				match(EOL);
				}
				break;
			case 10:
				_localctx = new LinecfuncContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(106);
				cfunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(MyParserParser.TYPE, 0); }
		public List<TerminalNode> ID() { return getTokens(MyParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MyParserParser.ID, i);
		}
		public TerminalNode EOL() { return getToken(MyParserParser.EOL, 0); }
		public List<TerminalNode> EQUAL() { return getTokens(MyParserParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(MyParserParser.EQUAL, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(MyParserParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(MyParserParser.COMA, i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(TYPE);
			setState(110);
			match(ID);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(111);
				match(EQUAL);
				setState(112);
				expr();
				}
			}

			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(115);
				match(COMA);
				setState(116);
				match(ID);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUAL) {
					{
					setState(117);
					match(EQUAL);
					setState(118);
					expr();
					}
				}

				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtrContext extends ParserRuleContext {
		public AtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atr; }
	 
		public AtrContext() { }
		public void copyFrom(AtrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AtrexprContext extends AtrContext {
		public TerminalNode ID() { return getToken(MyParserParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(MyParserParser.EQUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AtrexprContext(AtrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterAtrexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitAtrexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitAtrexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtrstrContext extends AtrContext {
		public TerminalNode ID() { return getToken(MyParserParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(MyParserParser.EQUAL, 0); }
		public TerminalNode STR() { return getToken(MyParserParser.STR, 0); }
		public AtrstrContext(AtrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterAtrstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitAtrstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor) return ((MyParserVisitor<? extends T>)visitor).visitAtrstr(this);
			else return visitor.visitChildren(this);
		}
	}
